samples/_failures_safe/1761787851_fbacd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6431f0a4.c: In function ‘main’:
./samples/SAFE/__tmp_6431f0a4.c:144:5: error: expected expression at end of input
  144 |     if (input_len > 0 && input[input_len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_6431f0a4.c:144:5: error: expected declaration or statement at end of input
